--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
   <head>
     <style>
       #cy {
-        width: 1000px;
-        height: 1000px;
+        width: 800px;
+        height: 800px;
         display: block;
+        background: #010101ff;
       }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.15.2/cytoscape.min.js"></script>
+    <script src="https://unpkg.com/weaverjs@1.2.0/dist/weaver.min.js"></script>
+    <script src="./cytoscape-spread.js"></script>
+    <script src="https://unpkg.com/layout-base/layout-base.js"></script>
+    <script src="https://unpkg.com/avsdf-base/avsdf-base.js"></script>
+    <script src="asdf.js"></script>
   </head>
 
   <body>
