--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <head>
     <style>
       #cy {
-        width: 800px;
-        height: 800px;
+        width: 100vw;
+        height: 100vh;
         display: block;
         background: #010101ff;
       }
