I think I got it

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <head>
     <style>
       #cy {
-        width: 100vw;
-        height: 85vh;
+        width: 1000px;
+        height: 1000px;
         display: block;
         background: #010101ff;
       }
